# customisable_monitoring_package

./: README.md  output_report copy.html  output_report.html  pyproject.toml  requirements.txt  setup.py
monitoring/: data_drift.py  drift_report.py  drift_report_template.html  prediction_drift.py  prediction_drift_report.py  prediction_drift_report_template.html  run_prediction_drift.py
monitoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monitoring/stat_tests/: anderson_darling_test.py  chi2_test.py  jensen_shannon_test.py  kl_divergence_test.py  ks_stat_test.py  levene_test.py  mannwhitneyu_test.py  mmd_test.py  psi_test.py  ttest.py  wasserstein_test.py
monitoring/tests/: test_data_drift.py
monitoring_package/: nothing.py
